Manually correct README and remove ineffective manifest changes